trunk/Archive2/fc/e269f7203b1eda/output
main.cpp:11:9: error: read-only variable is not assignable
    *it = begin(v);
    ~~~ ^
1 error generated.
